...
  const { data } = useDbQuery(loadCollection, type);
  const title = isType
    ? TYPE_META[type as ItemType].collection
    : type in VIRTUAL_COLLECTIONS
      ? VIRTUAL_COLLECTIONS[type as VirtualCollection].title
      : type === 'done'
        ? 'Done'
        : 'Archived';

  return (
    <>
      <Stack.Screen options={{ title }} />
      <FlatList
...
